--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jsminify",
+  "name": "@lotuz/jsminify",
   "version": "0.0.3",
   "description": "A javascript minifier built on top of a tree-sitter parser",
   "main": "index.js",
