--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,8 @@ before_deploy:
 - tar --create --verbose --file="$ARCHIVE_NAME" --directory "$TRAVIS_BUILD_DIR/prebuilds"
   .
 deploy:
-  github_token: $GITHUB_TOKEN
+  token: $GITHUB_TOKEN
+  GITHUB_TOKEN: $GITHUB_TOKEN
   provider: releases
   draft: false
   prerelease: true
